<resources>
    <string name="app_name">Auth</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="country_code">Country code</string>
    <string name="password">Password</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="verify_code">verifyCode</string>
    <string name="send">SEND</string>
    <string name="login">LOGIN</string>
    <string name="login_anonymous">LOGIN ANONYMOUS</string>
    <string name="register">REGISTER</string>
    <string name="register_info">do not have a account?</string>
    <string name="password_tips">If you have a password, you can login with a password, otherwise login with a verification code </string>
    <string name="password_register_tips">This step to set the initial password is optional. \n When you create an account, you can set an initial password, and you can use the password to login next time, of course, you can change this password at any time</string>
    <string name="title_avatar">Avatar</string>
    <string name="title_nickname">Nickname</string>
    <string name="title_phone">PhoneNumber:</string>
    <string name="defNickName">MyNickName</string>
    <string name="btnSingOutTxt">Sign Out</string>
    <string name="update">UPDATE</string>
    <string name="set">SETTING</string>
    <string name="title_activity_settings">Settings</string>
    <string name="link">LINK</string>
    <string name="unlink">UNLINK</string>
    <string name="delete_user">Delete User</string>
    <string name="update_email">Update Email</string>
    <string name="update_phone">Update Phone</string>
    <string name="update_password">Update Password</string>
    <string name="reset_password">Reset Password</string>


    <string name="hwid">Huawei ID</string>
    <string name="hwgame">Huawei Game</string>
    <string name="weChat">WeChat</string>
    <string name="qq">QQ</string>
    <string name="weibo">Weibo</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="google_play">Google Play</string>
    <string name="self_build">Self Build</string>

</resources>
