<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginBottom="@dimen/margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:gravity="center|end"
            android:text="@string/title_avatar"
            android:textSize="@dimen/titleSize" />

        <ImageView
            android:id="@+id/imgView_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Show User Photo"
            android:src="@mipmap/defavatar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_img"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center|end"
                android:text="@string/title_nickname"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/txtView_NickName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:minWidth="150dp"
                android:text="@string/defNickName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtSize" />

            <Button
                android:id="@+id/btn_update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/update"
                android:textSize="@dimen/txtSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center|end"
                android:text="@string/title_phone"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/txtView_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center|end"
                android:text="@string/email"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/txtView_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtSize" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_link"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/link" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_SingOut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_Signout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnSingOutTxt" />
    </LinearLayout>
</RelativeLayout>