<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_more"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="AGC AUTH" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/radio_btn"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radiobutton_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/radio_btn"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="CountryCode" />

            <EditText
                android:id="@+id/et_country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password_tips" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/verify_code" />

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="100dp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_login_anonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_anonymous" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/register" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/btn_register"
                android:gravity="center"
                android:minWidth="100dp"
                android:text="@string/register_info" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with third party" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/id_gallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" />

        </HorizontalScrollView>
    </LinearLayout>

</RelativeLayout>